# vasad-tools

./: .gitignore  BimObj.cpp  BimObj.h  CMakeLists.txt  README.md  draw_semantic_legend.py  extract_viewpoints.py  iogeometry.cpp  iogeometry.h  main.cpp  main_all_voxels_to_ply.cpp  main_assign_label.cpp  main_boolean_operations_check.cpp  main_closeness_checker.cpp  main_color_classes.cpp  main_compute_thickness.cpp  main_dataset_point_edge_features.cpp  main_edge_feature_to_ply.cpp  main_eval_point_semantic_improvement.cpp  main_graph_statistics.cpp  main_graph_to_ply.cpp  main_gt_to_split.cpp  main_implicit_eval.cpp  main_labeled_pc_to_obj.cpp  main_make_point_edge_features.cpp  main_merge_ply.cpp  main_mesh_to_plane.cpp  main_neighbourhood_stats.cpp  main_pc_to_dense.cpp  main_plane_arrangement.cpp  main_pt_view_shooter.cpp  main_read_boxes.cpp  main_split_graph.cpp  main_split_implicit.cpp  main_split_labeled_points.cpp  main_split_sparse_to_dense.cpp  main_split_voxels.cpp  main_split_voxels_pure.cpp  main_test.cpp  main_trivial_scan_simulator.cpp  (+8 more)
lib/: BimObj.h  Colormap.h  EvalMetrics.cpp  EvalMetrics.h  ImplicitRepresentation.cpp  ImplicitRepresentation.h  RegionGrowing.cpp  RegionGrowing.h  VoxelArrangement.cpp  VoxelArrangement.h  VoxelArrangementInline.h  VoxelSparse.cpp  VoxelSparse.h  graphStats.cpp  graphStats.h  graphStatsInline.h  iogeometry.cpp  iogeometry.h  meshProcessing.h  plyInline.h  sparseToDense.cpp  sparseToDense.h
scripts/: splitGraph.py
test/: graph_fixture.h  mainTest.cpp  test_eval.cpp  test_graph.cpp  test_implicit_representation.cpp  test_region_growing.cpp  test_voxels.cpp  test_voxels_sparse.cpp
